--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-<html>
-  
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CICATRIZ</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="header-title-img">
+            <h1><span><span class="white">les</span> agressions sexuelles</span> <span class="bigtitle">cicatr<span
+                        class="white">iz</span></span></h1>
+            <img src="img/header-img.svg" alt="">
+        </div>
+    </header>
+    <main>
+        <div class="presentation">
+            <h2><span>cicatriz</span> <span class="white">un projet étudiant</span></h2>
+            <p>Dataviz est un projet universitaire dans le cadre de notre deuxième année en BUT MMI (métiers du
+                multimédia de l’internet) qui se déroule en équipe de trois personnes. <br> <br>
+
+                Ce projet vise à créer un site web pour visualiser des données à propos d’un sujet qui évolue de façon
+                claire, attractive et percutante. </p>
+        </div>
+
+        <section class="section">
+
+        </section>
+        <section class="section">
+
+        </section>
+        <section class="section">
+
+        </section>
+    </main>
+</body>
+
 </html>
