code html du footer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
 
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__container  footer__container-title">
+            <h1 class="footer__title footer__title--h1">Les agressions sexuelles</h1>
+            <h1 class="footer__title footer__title--name">CICATRIZ</h1>
+            <h2 class="footer__title footer__title--h2">Un projet étudiant d'Amin Benazouz, Jérémy Tahar et Eve Gonçalves</h2>
+            <h3 class="footer__title footer__title--h3">Hébergé sur Github.com</h3>
+        </div>
+
+        <div class="footer__container footer__container-credit footer__container-linkedin">
+            <div class="footer__container-credit">
+                <h1 class="footer__title footer__credit-h1">CRÉDITS</h1>
+                <ul class="footer__list">
+                    <li class="footer__list-component">exemple - lorem ipsum</li>
+                    <li class="footer__list-component">exemple - lorem ipsum</li>
+                    <li class="footer__list-component">exemple - lorem ipsum</li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
