Code html et css du footer

--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
                 claire, attractive et percutante. </p>
         </div>
 
-        <section class="section">
-
+        <section class="section section__agression">
+            <div class="section__agression-text">
+                <h1>Les agressions<br> sexuelles</h1>
+                <p>Passer votre souris sur les tranches d'âge pour en savoir plus</p>
+            </div>
         </section>
+
         <section class="section">
 
         </section>
@@ -39,21 +43,17 @@
 
     <footer class="footer">
         <div class="footer__container  footer__container-title">
-            <h1 class="footer__title footer__title--h1">Les agressions sexuelles</h1>
-            <h1 class="footer__title footer__title--name">CICATRIZ</h1>
-            <h2 class="footer__title footer__title--h2">Un projet étudiant d'Amin Benazouz, Jérémy Tahar et Eve Gonçalves</h2>
-            <h3 class="footer__title footer__title--h3">Hébergé sur Github.com</h3>
+            <h1 class="footer__title footer__title--h1"><span class="white">Les</span> agressions sexuelles</h1>
+            <h1 class="footer__title footer__title--name"><span class="white">CICATR</span>IZ</h1>
         </div>
 
-        <div class="footer__container footer__container-credit footer__container-linkedin">
-            <div class="footer__container-credit">
-                <h1 class="footer__title footer__credit-h1">CRÉDITS</h1>
-                <ul class="footer__list">
-                    <li class="footer__list-component">exemple - lorem ipsum</li>
-                    <li class="footer__list-component">exemple - lorem ipsum</li>
-                    <li class="footer__list-component">exemple - lorem ipsum</li>
-                </ul>
-            </div>
+        <div class="footer__container footer__container-credit">
+            <ul class="footer__list">
+                <li class="footer__list-component"><a>Mentions légales</a></li>
+                <li class="footer__list-component"><a>Sources</a></li>
+                <li class="footer__list-component"><a>Nos Contacts</a></li>
+            </ul>
+        </div>
 
         </div>
     </footer>
