réparer le bug des liens du footer

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 
         <div class="footer__container footer__container-credit">
             <ul class="footer__list">
-                <li class="footer__list-component"><a>Mentions légales</a></li>
-                <li class="footer__list-component"><a>Sources</a></li>
-                <li class="footer__list-component"><a>Nos Contacts</a></li>
+                <li class="footer__list-component"><a href="#mention">Mentions légales</a></li>
+                <li class="footer__list-component"><a href="#sources">Sources</a></li>
+                <li class="footer__list-component"><a href="#contact">Nos Contacts</a></li>
             </ul>
+
+
+
         </div>
 
         </div>
