--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-title-img">
-            <h1><span><span class="white">les</span> agressions sexuelles</span> <span class="bigtitle">cicatr<span
+            <h1><span class="smalltitle"><span class="white">les</span> agressions sexuelles</span> <span class="bigtitle">cicatr<span
                         class="white">iz</span></span></h1>
             <img src="img/header-img.svg" alt="">
         </div>
