réparer le bug des liens du footer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
                 <li class="footer__list-component"><a href="#contact">Nos Contacts</a></li>
             </ul>
 
+            <div class="footer__container-modal" id="mention">
+                <div class="footer__container-textmodal">
 
+                </div>
+            </div>
+
+            <div class="footer__container-modal" id="sources"></div>
+            <div class="footer__container-modal" id="contact"></div>
 
         </div>
 
