ajout de la police d'écriture et affichage des avatars et des informations au survol

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CICATRIZ</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,16 +33,17 @@
         <section class="section section__agression">
             <div class="section__agression-text">
                 <h1><span class="white">Les</span> agressions<br> sexuelles</h1>
-                <p id="texte">Passer votre souris sur les tranches<br> d'âge pour en savoir plus</p>
-                <div class="section__agression-info" id="texte1">
+                <p id="texte" class="visible">Passer votre souris sur les tranches<br> d'âge pour en savoir plus</p>
+                
+                <div class="section__agression-info hidden" id="info1">
                     <h2>20%</h2>
                     <p>En 2020, les forces de l’ordre ont enregistré 31 589 victimes mineures, dont 80 % étaient des filles. Les agressions sexuelles envers cette population sont souvent sous-déclarées, mais les risques restent élevés, notamment au sein de la sphère familiale et dans les établissements scolaires​</p>
                 </div>
-                <div class="section__agression-info" id="texte2">
+                <div class="section__agression-info hidden" id="info2">
                     <h2>70%</h2>
                     <p>Les jeunes adultes et adultes jusqu'à 49 ans sont les plus concernés par les violences sexuelles, représentant environ 70 % des cas annuels. Environ 0,8 % des femmes de 18 à 29 ans signalent des agressions sexuelles chaque année, souvent par des personnes de leur entourage. </p>
                 </div>
-                <div class="section__agression-info" id="texte3">
+                <div class="section__agression-info hidden" id="info3">
                     <h2>10%</h2>
                     <p>Le risque de violences sexuelles diminue avec l’âge, mais les personnes de plus de 50 ans représentent encore environ 10 % des victimes. Ces violences touchent souvent des femmes vulnérables, notamment en institution, où la maltraitance reste un risque important.</p>
                 </div>
@@ -71,7 +76,7 @@
 
     <footer class="footer">
         <div class="footer__container  footer__container-title">
-            <h1 class="footer__title footer__title--h1"><span class="white">Les</span> agressions sexuelles</h1>
+            <h1 class="footer__title footer__title--h1"><span class="white">Les</span>agressions sexuelles</h1>
             <h1 class="footer__title footer__title--name"><span class="white">CICATR</span>IZ</h1>
         </div>
 
