--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                     <h2>20%</h2>
                     <p>En 2020, les forces de l’ordre ont enregistré 31 589 victimes mineures, dont 80 % étaient des filles. Les agressions sexuelles envers cette population sont souvent sous-déclarées, mais les risques restent élevés, notamment au sein de la sphère familiale et dans les établissements scolaires​</p>
                 </div>
+
                 <div class="section__agression-info hidden" id="info2">
                     <h2>70%</h2>
                     <p>Les jeunes adultes et adultes jusqu'à 49 ans sont les plus concernés par les violences sexuelles, représentant environ 70 % des cas annuels. Environ 0,8 % des femmes de 18 à 29 ans signalent des agressions sexuelles chaque année, souvent par des personnes de leur entourage. </p>
                 </div>
+                
                 <div class="section__agression-info hidden" id="info3">
                     <h2>10%</h2>
                     <p>Le risque de violences sexuelles diminue avec l’âge, mais les personnes de plus de 50 ans représentent encore environ 10 % des victimes. Ces violences touchent souvent des femmes vulnérables, notamment en institution, où la maltraitance reste un risque important.</p>
@@ -58,7 +60,7 @@
             </div>
 
             <div class="section__agression-img">
-                <img src="img/avatar.png">
+                <img id="avatar" src="img/avatar.png">
                 <img class="hidden" id="avatar_enfant" src="img/avatar_enfant.png">
                 <img class="hidden" id="avatar_adulte" src="img/avatar_adulte.png">
                 <img class="hidden" id="avatar_vieille" src="img/avatar_vieille.png">
