début du code javascript pour le dernier graphique et début de la mise en page de la section 3

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h2>70%</h2>
                     <p>Les jeunes adultes et adultes jusqu'à 49 ans sont les plus concernés par les violences sexuelles, représentant environ 70 % des cas annuels. Environ 0,8 % des femmes de 18 à 29 ans signalent des agressions sexuelles chaque année, souvent par des personnes de leur entourage. </p>
                 </div>
-                
+
                 <div class="section__agression-info hidden" id="info3">
                     <h2>10%</h2>
                     <p>Le risque de violences sexuelles diminue avec l’âge, mais les personnes de plus de 50 ans représentent encore environ 10 % des victimes. Ces violences touchent souvent des femmes vulnérables, notamment en institution, où la maltraitance reste un risque important.</p>
@@ -71,8 +71,13 @@
         <section class="section">
 
         </section>
-        <section class="section">
 
+        <section class="section section__condamnation">
+            <div class="section__condamnation-titre">
+                <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> CONDAMNATIONS <span class="white"><br>ET</span> CONDAMNATIONS CLASSÉ SANS SUITE</h1>
+            </div>
+
+            <canvas id="graph3"></canvas>
         </section>
     </main>
 
