début de la création du dernier graphique

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
                 <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> CONDAMNATIONS <span class="white"><br>ET</span> CONDAMNATIONS CLASSÉ SANS SUITE</h1>
             </div>
 
-            <canvas id="graph3"></canvas>
+            <div class="section__condamnation-graph">
+                <canvas width="600px" height="300px" id="graph3">
+                </canvas>
+            </div>
+
         </section>
     </main>
 
