Second graph finished

--- a/index.html
+++ b/index.html
@@ -69,8 +69,18 @@
 
         </section>
 
-        <section class="section">
+        <section class="section section_victime">
+            <div class="section__victime-titre">
+                <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> VICTIMES <br>D'AGRESSIONS SEXUELLES</h1>
+            </div>
 
+            <div class="section__victime-info" id="section__victime-info">
+            </div>
+
+            <div class="section__victime-graph">
+                <canvas id="graph2">
+                </canvas>
+            </div>
         </section>
 
         <section class="section section__condamnation">
