--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <section class="section section__condamnation">
             <div class="section__condamnation-titre">
                 <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> CONDAMNATIONS <span class="white"><br>ET</span> CONDAMNATIONS CLASSÉ SANS SUITE</h1>
+                <h2>Cliquez sur les points</h2>
             </div>
 
             <div class="section__condamnation-info" id="section__condamnation-info">
@@ -83,8 +84,15 @@
             </div>
             
             <div class="section__condamnation-graph">
-                <canvas width="600px" height="300px" id="graph3">
+                <canvas id="graph3" class="visible">
                 </canvas>
+
+                <canvas id="graphBar" class="hidden">
+                </canvas>
+
+                <button id="changeToBar">Passer en Bar</button>
+                <button id="changeToLine">Passer en Line</button>
+                
             </div>
 
         </section>
