Add action text graph2

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
 
             <div class="section__victime-info" id="section__victime-info">
+                <div class="section__victime-info-action">Cliquez sur les <span class="purple">points</span> <br> pour plus d'informations</div>
             </div>
 
             <div class="section__victime-graph">
