Map interactions and style improved

--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
 
         <section class="section section__carte">
             <div class="section__carte-titre">
+                <h2>nombre d'agressions sexuelles par <span class="dark-purple">région en france</span></h2>
             </div>
             <div id="map"></div>
             <div class="section__carte-info">
-                Survolez les départements pour voir le nombre de victimes d'agressions sexuelles
+                <div class="section__carte-info-action">Cliquez sur les <span class="purple">points</span> <br> pour
+                    plus d'informations</div>
             </div>
         </section>
     </main>
