Change action message map

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div id="map"></div>
             <div class="section__carte-info">
-                <div class="section__carte-info-action">Cliquez sur les <span class="purple">points</span> <br> pour
+                <div class="section__carte-info-action">Cliquez sur les <span class="purple">régions</span> <br> pour
                     plus d'informations</div>
             </div>
         </section>
