Map style and event changes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <section class="section section__carte">
             <div class="section__carte-titre">
-                <h2>nombre d'agressions sexuelles par <span class="dark-purple">région en france</span></h2>
+                <h2>nombre d'agressions sexuelles par <span class="purple">région en france</span></h2>
             </div>
             <div id="map"></div>
             <div class="section__carte-info">
