design des boutons

--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
 
                 <canvas id="graphBar" class="hidden">
                 </canvas>
-
-                <button id="changeToBar">Passer en Bar</button>
-                <button id="changeToLine">Passer en Line</button>
-
             </div>
+
+            <button id="changeToBar" class="changeToBar"><img src="img/icone_bar.png"></button>
+            <button id="changeToLine" class="changeToLine"><img src="img/icone_courbe.png"></button>
 
         </section>
 
