design des boutons fini

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
                 </canvas>
             </div>
 
-            <button id="changeToBar" class="changeToBar"><img src="img/icone_bar.png"></button>
-            <button id="changeToLine" class="changeToLine"><img src="img/icone_courbe.png"></button>
+            <div class="section__condamnation-button">
+                <button id="changeToBar" class="changeToBar"><img src="img/icone_bar.svg"></button>
+                <button id="changeToLine" class="changeToLine"><img src="img/icone_courbe.svg"></button>
+            </div>
 
         </section>
 
