--- a/index.html
+++ b/index.html
@@ -89,14 +89,16 @@
                 <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> VICTIMES <br>D'AGRESSIONS SEXUELLES</h1>
             </div>
 
-            <div class="section__victime-info" id="section__victime-info">
-                <div class="section__victime-info-action">Cliquez sur les <span class="purple">points</span> <br> pour
-                    plus d'informations</div>
-            </div>
-
-            <div class="section__victime-graph">
-                <canvas id="graph2">
-                </canvas>
+            
+            <div class="section__victime-graph-info">
+                <div class="section__victime-graph">
+                    <canvas id="graph2">
+                    </canvas>
+                </div>
+                
+                <div class="section__victime-info" id="section__victime-info">
+                    <div class="section__victime-info-action">Cliquez sur les <span class="purple">points</span> <br> pour plus d'informations</div>
+                </div>
             </div>
         </section>
 
