amélioration de la mise en forme de la page condamnation

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <main>
         <div class="presentation">
             <h2><span>cicatriz</span> <span class="white">un projet étudiant</span></h2>
-            <p>Dataviz est un projet universitaire dans le cadre de notre deuxième année en BUT MMI (métiers du
-                multimédia de l’internet) qui se déroule en équipe de trois personnes. <br> <br>
-
-                Ce projet vise à créer un site web pour visualiser des données à propos d’un sujet qui évolue de façon
-                claire, attractive et percutante. </p>
+            <p>Cicatriz est un projet étudiant réalisé par Jérémy Tahar, Eve Gonçalves et Amin Benazzouz. L'objectif techniques attendues étaient la visualisation de données à travers différentes méthodes et l'utilisation de diverses librairies tel que <a href="https://www.chartjs.org">chart.js.
+            </a><br> <br>
+            Mais plus qu'un simple exercice technique, Cicatriz est notre manière de mettre en avant un mal qui gangrène notre société et qui est bien trop souvent étouffé voir banalisé. Cela nous tenait à coeur de pouvoir mettre en lumière l'ampleur que prend les agressions sexuelles au fil du temps. 
+ 
+            </p>
         </div>
 
         <section class="section section__agression">
@@ -102,8 +102,7 @@
 
         <section class="section section__condamnation">
             <div class="section__condamnation-titre">
-                <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> CONDAMNATIONS <span class="white"><br>ET</span>
-                    CONDAMNATIONS CLASSÉ SANS SUITE</h1>
+                <h1><span class="white">ÉVOLUTION DU NOMBRE DE</span> PLAINTES <span class="white">ET</span> DE CONDAMNATIONS</h1>
                 <h2>Cliquez sur les points</h2>
             </div>
 
