amélioration de l'affichage des textes pour la section condamnation

--- a/index.html
+++ b/index.html
@@ -109,15 +109,11 @@
             </div>
 
             <div class="section__condamnation-info" id="section__condamnation-info">
-
             </div>
 
             <div class="section__condamnation-graph">
-                <canvas id="graph3" class="visible">
-                </canvas>
-
-                <canvas id="graphBar" class="hidden">
-                </canvas>
+        <canvas id="graph3" class="visible"></canvas>
+        <canvas id="graphBar" class="hidden"></anvas>                                                                           
             </div>
 
             <div class="section__condamnation-button">
@@ -151,17 +147,14 @@
                 <li class="footer__list-component"><a href="#sources">Sources</a></li>
                 <li class="footer__list-component"><a href="#contact">Nos Contacts</a></li>
             </ul>
-
-            <div class="footer__container-modal" id="mention">
-                <div class="footer__container-textmodal">
-
-                </div>
-            </div>
-
-            <div class="footer__container-modal" id="sources"></div>
-            <div class="footer__container-modal" id="contact"></div>
-
         </div>
+        <div class="footer__container-modal" id="mention">
+                <div class="footer__container-textmodal">
+                </div>
+        </div>
+        <div class="footer__container-modal" id="sources"></div>
+        <div class="footer__container-modal" id="contact"></div>
+
 
         </div>
     </footer>
