Added legal notices to mentions.html

--- a/index.html
+++ b/index.html
@@ -149,38 +149,12 @@
 
         <div class="footer__container footer__container-credit">
             <ul class="footer__list">
-                <li class="footer__list-component open-modal" data-content="Mentions légales"><button class="open-modal"
-                        data-target="mentions-legales">Mentions légales</button></li>
-                <li class="footer__list-component open-modal"><button class="open-modal"
-                        data-target="sources">Sources</button></li>
-                <li class="footer__list-component open-modal"><button class="open-modal" data-target="contacts">Nos
+                <li class="footer__list-component"><a href="mentions.html">Mentions légales</a>
+                </li>
+                <li class="footer__list-component"><button>Sources</button></li>
+                <li class="footer__list-component"><button>Nos
                         contacts</button></li>
             </ul>
-        </div>
-
-        <div id="modal" class="modal">
-            <div class="modal-content">
-                <span id="close-modal" class="close">&times;</span>
-                <div id="modal-body"></div>
-            </div>
-        </div>
-
-        <div id="mentions-legales" class="modal-section" style="display: none;">
-            <h2>Mentions légales</h2>
-            <p>Voici le contenu de la section 1.</p>
-            <a href="#">Lien utile 1</a>
-        </div>
-
-        <div id="sources" class="modal-section" style="display: none;">
-            <h2>Sources</h2>
-            <p>Voici le contenu de la section 2.</p>
-            <a href="#">Lien utile 2</a>
-        </div>
-
-        <div id="contacts" class="modal-section" style="display: none;">
-            <h2>Contacts</h2>
-            <p>Voici le contenu de la section 3.</p>
-            <a href="#">Lien utile 3</a>
         </div>
     </footer>
 
