--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
     <main>
         <div class="presentation">
             <h2><span>cicatriz</span> <span class="white">un projet étudiant</span></h2>
-            <p>Cicatriz est un projet étudiant réalisé par Jérémy Tahar, Eve Gonçalves et Amin Benazzouz. L'objectif
-                techniques attendues étaient la visualisation de données à travers différentes méthodes et l'utilisation
-                de diverses librairies tel que <a href="https://www.chartjs.org">chart.js.
-                </a><br> <br>
+            <p>Cicatriz est un projet étudiant réalisé par Jérémy Tahar, Eve Gonçalves et Amin Benazzouz. L'objectif technique attendu était la visualisation de données à travers différentes méthodes et l'utilisation
+                de diverses librairies tel que <a href="https://www.chartjs.org">chart.js
+                </a>.<br> <br>
                 Mais plus qu'un simple exercice technique, Cicatriz est notre manière de mettre en avant un mal qui
                 gangrène notre société et qui est bien trop souvent étouffé voir banalisé. Cela nous tenait à coeur de
-                pouvoir mettre en lumière l'ampleur que prend les agressions sexuelles au fil du temps.
+                pouvoir mettre en lumière l'ampleur que prennent les agressions sexuelles au fil du temps.
 
             </p>
         </div>
