--- a/mentions.html
+++ b/mentions.html
@@ -45,6 +45,11 @@
             <a href="https://www.github.com">www.github.com</a></p>
         </section>
         <section>
+            <h2>Données collectées par Github Pages</h2>
+            <p>Données collectées par GitHub Pages
+                Le site est hébergé sur GitHub Pages, un service proposé par GitHub, Inc. Lors de votre navigation, GitHub peut collecter des données techniques telles que votre adresse IP, le type de navigateur utilisé, et des informations relatives à votre appareil. Ces données sont utilisées pour garantir la sécurité du site et améliorer le service. Pour plus d'informations, vous pouvez consulter la <a href="https://docs.github.com/fr/site-policy/privacy-policies/github-general-privacy-statement">Politique de confidentialité de GitHub</a>.</p>
+        </section>
+        <section>
             <h2>Politique de Confidentialité</h2>
             <p>Aucune donnée relative aux utilisateurs n’est collectée ni partagée dans le cadre de ce projet. Notre démarche repose exclusivement sur l’utilisation des données fournies par nos sources officielles pour produire nos graphiques et analyses. Nous garantissons que seules ces sources externes, telles que l'INSEE, VISUSTAT, INED et STATISTA, sont utilisées pour l’élaboration de contenus informatifs et éducatifs. Aucune information personnelle ou donnée supplémentaire n’est recueillie ni exploitée.</p>
         </section>
