--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
             <div class="section__carte-titre">
                 <h2>nombre d'agressions sexuelles par <span class="purple">région en france</span></h2>
             </div>
-            <div id="map"></div>
+            <div id="map-container">
+                <div id="map"></div>
+                <div id="region-map"></div>
+            </div>
             <div class="section__carte-info">
                 <div class="section__carte-info-action">Cliquez sur les <span class="purple">régions</span> <br> pour
                     plus d'informations</div>
@@ -155,19 +158,6 @@
                         contacts</button></li>
             </ul>
         </div>
-<<<<<<< HEAD
-
-        <div class="footer__container-modal" id="mention">
-                <div class="footer__container-textmodal">
-                </div>
-        </div>
-
-        <div class="footer__container-modal" id="sources"></div>
-        <div class="footer__container-modal" id="contact"></div>
-
-
-=======
->>>>>>> a2bdf636a4ac2bd52a6e5a9a1abeebdc40451ae5
     </footer>
 
     <script src="script/script.js"></script>
