--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <section class="section section__carte">
             <div class="section__carte-titre">
-                <h2>nombre d'agressions sexuelles par <span class="purple">région en france</span></h2>
+                <h2>nombre d'agressions sexuelles par <span class="purple">région en france en 2023</span></h2>
             </div>
             <div id="map-container">
                 <div id="map"></div>
