Modal windows changed

--- a/index.html
+++ b/index.html
@@ -278,18 +278,26 @@
         <div class="modal3" id="contact">
                 <div class="contact">
                     <a href="#footer" class="close">&times;</a>
-                    <h1>Nos Linkedin</h1>
+                    <h1>Nos contacts</h1>
+                    <h2>Amin Benazzouz</h2>
                     <ul>
-                        <li><a href="">Eve Gonçalves</a></li>
-                        <li><a href="">Jérémy Tahar</a></li>
-                       <li><a href="">Amin Benazzouz</a></li>
+                        <li><img src="img/github.svg" alt=""><a href="">Github</a></li>
+                        <li><img src="img/linkedin.svg" alt=""><a href="">Linkedin</a></li>
+                       <li><img src="img/mail.svg" alt=""><a href="mailto:jeremy.tahar12@gmail.com">aminbenazzouz9@gmail.com</a></li>
+                    </ul>
+                    
+                    <h2>Eve Gonçalves</h2>
+                    <ul>
+                        <li><img src="img/github.svg" alt=""><a href="">Github</a></li>
+                        <li><img src="img/linkedin.svg" alt=""><a href="">Linkedin</a></li>
+                        <li><img src="img/mail.svg" alt=""><a href="mailto:evegoncalves.pro@gmail.com">evegoncalves.pro@gmail.com</a></li>
                     </ul>
 
-                    <h1>Nos github</h1>
+                    <h2>Jérémy Tahar</h2>
                     <ul>
-                        <li><a href="">Eve Gonçalves</a></li>
-                        <li><a href="">Jérémy Tahar</a></li>
-                        <li><a href="">Amin Benazzouz</a></li>
+                        <li><img src="img/github.svg" alt=""><a href="">Github</a></li>
+                        <li><img src="img/linkedin.svg" alt=""><a href="">Linkedin</a></li>
+                       <li><img src="img/mail.svg" alt=""><a href="mailto:jeremy.tahar12@gmail.com">jeremy.tahar12@gmail.com</a></li>
                     </ul>
                 </div>
         </div>
@@ -300,5 +308,4 @@
 
     <script src="script/script.js"></script>
 </body>
-
 </html>
